# cynthion-litex

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml
hello-c/: Makefile  link.ld  main.c  start.S
hello-rust/: Cargo.toml  Makefile  build.rs  device.x  gsg_cynthion-memory.x  link-bootrom.x  link-generic.x  link.x  memory-bootrom.x  memory-gsg_cynthion.x  memory-radiona_ulx3s.x  radiona_ulx3s-memory.x
hello-rust/.cargo/: config.toml  flash.sh
hello-rust/src/: lib.rs  macros.rs  main.rs
soc/: __init__.py  hello.py
soc/targets/: gsg_cynthion.py  radiona_ulx3s.py
