[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

[features]
default = [
  # memory & linker layout
  #"bootrom",
  "cynthion",
  #"ulx3s",

  # soc framework
  #"litex",
  #"litex_sim",
  "lunasoc",
]

# select memory layout
bootrom = []
cynthion = []
ulx3s = []

# select soc framework
litex = []
litex_sim = []
lunasoc = []


[dependencies]

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = false
#opt-level = "s"
opt-level = 0
overflow-checks = false
